# merciless-mario

./: .gitignore  CMakeLists.txt  README.md  build_cmake.sh  launch.sh  run_compile.sh  set_up_libs_windows.sh  setup.sh
build-tools/: clion_code_style.xml
include/: game_engine.h
include/component/: component.h
include/core/: action.h  audio_manager.h  common_constants.h  texture_manager.h
include/entity/: entity.h  entity_manager.h
include/scene/: scene.h
include/scene/gameplay_scene/: gameplay_scene.h
include/scene/gameplay_scene/component/: c_action.h  c_animation.h  c_collision.h  c_cursor_follower.h  c_gravity.h  c_interactable.h  c_lifespan.h  c_movement.h  c_sprite.h  c_sprite_group.h  c_transform.h  c_weapon.h
include/scene/gameplay_scene/system/: animation_system.h  collision_system.h  entity_spawn_system.h  lifespan_system.h  projectile_system.h  render_system.h  transform_system.h  view_system.h
include/scene/menu_scene/: menu_scene.h
include/system/: system.h  system_manager.h
resources/level/: level_1.txt  level_2.txt  level_3.txt  level_4.txt  level_5.txt
src/: game_engine.cpp  main.cpp
src/core/: action.cpp  audio_manager.cpp  texture_manager.cpp
src/entity/: entity.cpp  entity_manager.cpp
src/scene/: scene.cpp
src/scene/gameplay_scene/: gameplay_scene.cpp
src/scene/gameplay_scene/component/: c_action.cpp  c_animation.cpp  c_collision.cpp  c_cursor_follower.cpp  c_gravity.cpp  c_interactable.cpp  c_lifespan.cpp  c_movement.cpp  c_sprite.cpp  c_sprite_group.cpp  c_transform.cpp  c_weapon.cpp
src/scene/gameplay_scene/system/: animation_system.cpp  collision_system.cpp  entity_spawn_system.cpp  lifespan_system.cpp  projectile_system.cpp  render_system.cpp  transform_system.cpp  view_system.cpp
src/scene/menu_scene/: menu_scene.cpp
src/system/: system_manager.cpp
